[package]
name = "parametric-l-systems"
version = "0.1.0"
authors = ["Lukas Herzberger <herzberger.lukas@gmail.com>"]
edition = "2021"
description = "An implementation of parametric L-systems for the Fractals course at TU Wien."
repository = "github.com/JolifantoBambla/parametric-l-systems"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
glam = { version = "0.20.2", features = ["bytemuck", "serde"] }
instant = "0.1.12"
log = "0.4.6"
obj-rs = "0.7.0"
readonly = "0.2.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.82"
winit = "0.27.5"
wgpu = { version = "0.16.0", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.50"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.23"
wasm-logger = "0.2.0"
web-sys = { version = "=0.3.61", features = ["CustomEvent", "CustomEventInit", "Event", "EventTarget", "HtmlInputElement", "Location"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
naga = { version = "0.7", features = ["glsl-in", "spv-out", "wgsl-out"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
